BAP-22197: Aggregated Context for Email Threads (#36441)
